fixing outline on small devices

--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,7 @@ body {
     overflow: hidden;
     width: 100%;
     height: 100%;
+    outline: none;
 }
 
 .webgl {
@@ -38,3 +39,4 @@ body {
     transform-origin: top right;
     transition: transform 1.0s ease-in-out;
 }
+
